Enhance invitation details: add adults-only note and contact information, update RSVP text. Adjust styles for improved readability and visual appeal.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,15 @@
           <div class="invite-venue">
             Tandoor Cuisine of India<br />1132 E Katella Ave, Orange, CA 92867
           </div>
-          <div class="rsvp-text">Please RSVP</div>
+          <div class="invite-note">
+            Kindly note: This is an adults-only celebration.
+          </div>
+          <div class="contact-info">
+            For any questions, please contact:<br />
+            Sara: (714) 123-4567<br />
+            Arafat: (714) 123-4567
+          </div>
+          <div class="rsvp-text">Please RSVP Below</div>
           <button class="rsvp-button" onclick="showRSVPForm()">
             <svg
               class="checkmark-icon"
