Refine contact information formatting: remove parentheses from phone numbers for consistency. Update styles to enhance text visibility and ensure proper rendering.

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
           </button>
           <div class="contact-info">
             For any questions, please contact:<br />
-            Sara: (949) 545-3323<br />
-            Arafat: (971) 352-7503
+            Sara: 949 545 3323<br />
+            Arafat: 971 352 7503
           </div>
           <div
             id="rsvp-form-container"
