Change remove stuff

--- a/index.html
+++ b/index.html
@@ -35,19 +35,12 @@
           <span class="name">SARA</span>
         </div>
         <div class="invite-details">
-          <div class="invite-sub">invite you to their engagement</div>
-          <div class="invite-month">JULY 12, 2025</div>
-          <div class="invite-month">5:00 PM</div>
-          <div class="invite-venue">
-            Tandoor Cuisine of India<br />1132 E Katella Ave, Orange, CA 92867
-          </div>
-          <div class="invite-note">
-            Kindly note: This is an adults-only celebration.
-          </div>
+          <div class="invite-sub">Will be having a wedding inshaAllah</div>
+          <div class="invite-month">date: TBD</div>
 
-          <div class="rsvp-text">Please RSVP Below</div>
+          <!-- <div class="rsvp-text">Please RSVP Below</div> -->
 
-          <button class="rsvp-button" onclick="showRSVPForm()">
+          <!-- <button class="rsvp-button" onclick="showRSVPForm()">
             <svg
               class="checkmark-icon"
               viewBox="0 0 24 24"
@@ -60,7 +53,7 @@
               />
             </svg>
             I'm Attending
-          </button>
+          </button> -->
           <div
             id="rsvp-form-container"
             class="rsvp-form-container"
