Update to be wedding

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Arafat & Sara Engagement Invitation</title>
+    <title>Arafat & Sara Wedding Invitation</title>
     <link rel="stylesheet" href="styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Great+Vibes&display=swap"
@@ -30,17 +30,23 @@
       <main class="invite-card">
         <img src="bismillah2.svg" alt="Bismillah" class="bismillah-img" />
         <div class="invite-names">
+          <div class="invite-sub">Join us for the wedding of</div>
           <span class="name">ARAFAT</span>
           <span class="and">and</span>
           <span class="name">SARA</span>
         </div>
         <div class="invite-details">
-          <div class="invite-sub">Will be having a wedding inshaAllah</div>
-          <div class="invite-month">date: TBD</div>
+          <div class="invite-date">January 19, 2026</div>
+          <div class="invite-venue">
+            R Banquet<br />
+            3740 Park Sierra Dr,<br />
+            Riverside, CA 92505
+          </div>
+          <div class="invite-time">6:00 PM</div>
 
-          <!-- <div class="rsvp-text">Please RSVP Below</div> -->
+          <div class="rsvp-text">Please RSVP Below</div>
 
-          <!-- <button class="rsvp-button" onclick="showRSVPForm()">
+          <button class="rsvp-button" onclick="showRSVPForm()">
             <svg
               class="checkmark-icon"
               viewBox="0 0 24 24"
@@ -53,7 +59,7 @@
               />
             </svg>
             I'm Attending
-          </button> -->
+          </button>
           <div
             id="rsvp-form-container"
             class="rsvp-form-container"
