--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
           </div>
           <div class="invite-time">6:00 PM</div>
 
+          <div class="invite-note">Females Only · Adults Only</div>
           <div class="rsvp-text">Please RSVP Below</div>
 
           <button class="rsvp-button" onclick="showRSVPForm()">
