--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           </div>
           <div class="invite-time">5:00 PM</div>
 
-          <div class="invite-note">Females Only · Adults Only</div>
+          <div class="invite-note">Adults Only</div>
           <div class="rsvp-text">Please RSVP Below</div>
 
           <button class="rsvp-button" onclick="showRSVPForm()">
