Enhance wedding invitation layout and styles: update names and parent details in index.html, improve text visibility, and adjust styles in styles.css for a more elegant presentation.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Arafat & Sara Wedding Invitation</title>
     <link rel="stylesheet" href="styles.css" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Great+Vibes&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&family=Great+Vibes&family=Cormorant:ital,wght@0,300;0,400;1,300&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -29,22 +29,47 @@
 
       <main class="invite-card">
         <img src="bismillah2.svg" alt="Bismillah" class="bismillah-img" />
+        <div class="bismillah-text">
+          In the name of Allah<br />
+          The Most Beneficent, The Most Merciful
+        </div>
         <div class="invite-names">
-          <div class="invite-sub">Join us for the wedding of</div>
-          <span class="name">ARAFAT</span>
-          <span class="and">and</span>
-          <span class="name">SARA</span>
+          <div class="invite-sub">Together with their families</div>
+          <span class="name">Arafat Iqbal</span>
+          <div class="parent-names">
+            SON OF <strong>HAJI SAMIUDDIN IQBAL</strong>
+          </div>
+          <div class="and-container">
+            <span class="and-line"></span>
+            <span class="and">and</span>
+            <span class="and-line"></span>
+          </div>
+          <span class="name">Sara Rahimi</span>
+          <div class="parent-names">
+            DAUGHTER OF <strong>NEMATULLAH RAHIMI</strong>
+          </div>
+          <div class="invite-sub" style="margin-top: 20px">
+            Request the pleasure of your company<br />as they joyfully unite in
+            marriage
+          </div>
         </div>
         <div class="invite-details">
           <div class="invite-date">January 19, 2026</div>
-          <div class="invite-venue">
+          <a
+            href="https://www.google.com/maps/search/?api=1&query=R+Banquet+3740+Park+Sierra+Dr+Riverside+CA+92505"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="invite-venue"
+          >
             R Banquet<br />
             3740 Park Sierra Dr,<br />
             Riverside, CA 92505
-          </div>
+          </a>
           <div class="invite-time">5:00 PM</div>
 
-          <div class="invite-note">Adults Only</div>
+          <div class="invite-note">
+            Adults Only · No Video Recording or photos please
+          </div>
           <div class="rsvp-text">Please RSVP Below</div>
 
           <button class="rsvp-button" onclick="showRSVPForm()">
